option('dynamic-parallelizer', type : 'boolean', value : true)
option('use-jack', type : 'boolean', value : true)
option('use-alsa', type : 'boolean', value : true)
option('use-dummy', type : 'boolean', value : true)
option('use-x11', type : 'boolean', value : true)
option('use-qt4', type : 'boolean', value : false)
option('use-qt5', type : 'boolean', value : false)
option('use-gtk2', type : 'boolean', value : false)
option('use-gtk3', type : 'boolean', value : false)
