option('dynamic-parallelizer', type : 'boolean', value : true)

option('use-jack', type : 'boolean', value : true)
option('use-alsa', type : 'boolean', value : true)
option('use-dummy', type : 'boolean', value : true)

option('use-x11', type : 'boolean', value : true)
option('use-qt4', type : 'boolean', value : false)
option('use-qt5', type : 'boolean', value : false)
option('use-gtk2', type : 'boolean', value : false)
option('use-gtk3', type : 'boolean', value : false)

option('build-debug-overlay',
	type : 'boolean',
	value : false)
option('build-tests',
	type : 'boolean',
	value : true)

option('use-backend-cairo',
	type : 'feature',
	value : 'disabled')
option('use-backend-nanovg',
	type : 'feature',
	value : 'enabled')

option('use-frontend-pugl',
	type : 'feature',
	value : 'enabled')

option('use-vterm',
	type : 'feature',
	value : 'disabled')
option('use-fontconfig',
	type : 'feature',
	value : 'enabled')

option('lv2libdir',
	type : 'string',
	value : 'lib/lv2')
